# SeriousOrganizerServer

./: .env  .gitignore  .gitmodules  Cargo.toml  build-service.bat  empty.sqlite3  test.sqlite3
src/: data.rs  main.rs  schema.rs  wstring.rs
