[package]
name = "serious_organizer_server"
version = "0.1.1"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]

[dependencies]
#serious_organizer_lib = { git = "https://github.com/JesperAxelsson/SeriousOrganizerLib" }
serious_organizer_lib = { path = "C:/home/jesper/rust/SeriousOrganizerLib" }
rmp-serde = "0.13.7"
serde = "1.0.80"
serde_derive = "1.0.80"
time = "0.1.40"
num = "0.2"
num-traits = "0.2"
byteorder = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["winuser", "ntdef", "namedpipeapi", "minwinbase", "minwindef", "winbase", "handleapi", "fileapi" ] }
