[package]
name = "serious_organizer_server"
version = "0.1.1"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

[dependencies]
#serious_organizer_lib = { git = "https://github.com/JesperAxelsson/SeriousOrganizerLib" }
#serious_organizer_lib = { path = "C:/home/jesper/rust/SeriousOrganizerLib" }
serious_organizer_lib = { path = "./SeriousOrganizerLib" }
rmp-serde = "0.13.7"
serde = "1.0.90"
serde_derive = "1.0.90"
time = "0.1.42"
num = "0.2.0"
num-traits = "0.2.6"
byteorder = "1.3.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["winuser", "ntdef", "namedpipeapi", "minwinbase", "minwindef", "winbase", "handleapi", "fileapi" ] }


[workspace]

members = [
    "SeriousOrganizerLib",
]
