[package]
name = "serious_organizer_server"
version = "0.1.1"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

[dependencies]
#serious_organizer_lib = { git = "https://github.com/JesperAxelsson/SeriousOrganizerLib" }
#serious_organizer_lib = { path = "C:/home/jesper/rust/SeriousOrganizerLib" }
serious_organizer_lib = { path = "./SeriousOrganizerLib" }
rmp-serde = "0.13.7"
serde = "1.0.98"
serde_derive = "1.0.98"
time = "0.1.42"

num = "0.2.0"
num-traits = "0.2.8"
num-derive = "0.2.5"

byteorder = "1.3.2"

log = "0.4.*"
simplelog = "^0.7.2"
# windows-service = "0.2.0"
windows-service = { git = "https://github.com/mullvad/windows-service-rs.git"}

libc = "0.2.40"
widestring = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["winuser", "ntdef", "namedpipeapi", "minwinbase", "minwindef", "winbase", "handleapi", "fileapi", "securitybaseapi", "accctrl", "aclapi", "errhandlingapi", "sddl" ] }


[workspace]
members = [
    "SeriousOrganizerLib",
]

[features]
default = []
service=[]